[gd_scene load_steps=13 format=3 uid="uid://c3rs2wth2eni6"]

[ext_resource type="Script" path="res://Maze/Controller/UI/GameOptions.gd" id="1_3vsrw"]
[ext_resource type="Theme" uid="uid://cw4o8gt2g0buu" path="res://Resources/Edit_Textures/panel_configuracion.tres" id="2_ubbpd"]
[ext_resource type="Texture2D" uid="uid://ck2jqp6snu0r2" path="res://Resources/ImagenesTextures/texture-panel.jpg" id="3_titsk"]
[ext_resource type="Texture2D" uid="uid://c07sb8wmwlb0o" path="res://Resources/Inkscape/Botones.svg" id="4_qj2il"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7ruwn"]
texture = ExtResource("3_titsk")
region_rect = Rect2(4318.46, 1368.06, 1154.44, 455.7)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_givgs"]
texture = ExtResource("3_titsk")
region_rect = Rect2(4324.06, 821.223, 1146.84, 440.51)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_knbhl"]
texture = ExtResource("3_titsk")
region_rect = Rect2(4308.87, 1945.28, 1162.04, 402.535)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vwy5w"]
texture = ExtResource("3_titsk")
region_rect = Rect2(4316.46, 281.978, 1150.64, 436.713)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7txyo"]
texture = ExtResource("4_qj2il")
texture_margin_left = 15.0
texture_margin_top = 10.0
texture_margin_right = 15.0
texture_margin_bottom = 10.0
region_rect = Rect2(13.5033, 37.321, 341.732, 70.4493)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tgodx"]
texture = ExtResource("4_qj2il")
texture_margin_left = 15.0
texture_margin_top = 10.0
texture_margin_right = 15.0
texture_margin_bottom = 10.0
region_rect = Rect2(11.942, 129.741, 336.124, 69.3978)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a73en"]
texture = ExtResource("4_qj2il")
texture_margin_left = 15.0
texture_margin_top = 10.0
texture_margin_right = 15.0
texture_margin_bottom = 10.0
region_rect = Rect2(386.581, 479.189, 339.979, 69.7483)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e52o8"]
texture = ExtResource("4_qj2il")
texture_margin_left = 15.0
texture_margin_top = 10.0
texture_margin_right = 15.0
texture_margin_bottom = 10.0
region_rect = Rect2(5.28266, 225.777, 338.577, 69.0473)

[node name="GameOptions" type="Control"]
layout_mode = 3
anchors_preset = 0
pivot_offset = Vector2(250, 200)
script = ExtResource("1_3vsrw")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -225.0
offset_right = 250.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ubbpd")

[node name="Container" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Tipo" type="HBoxContainer" parent="PanelContainer/Container"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="PanelContainer/Container/Tipo"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Juego" type="Button" parent="PanelContainer/Container/Tipo"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_7ruwn")
theme_override_styles/hover = SubResource("StyleBoxTexture_givgs")
theme_override_styles/pressed = SubResource("StyleBoxTexture_knbhl")
theme_override_styles/focus = SubResource("StyleBoxTexture_vwy5w")
text = "Juego"

[node name="General" type="Button" parent="PanelContainer/Container/Tipo"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_7ruwn")
theme_override_styles/hover = SubResource("StyleBoxTexture_givgs")
theme_override_styles/pressed = SubResource("StyleBoxTexture_knbhl")
theme_override_styles/focus = SubResource("StyleBoxTexture_vwy5w")
text = "General"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/Container"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="PanelContainer/Container"]
layout_mode = 2
theme_override_constants/margin_left = 29
theme_override_constants/margin_right = 25

[node name="Info" type="VBoxContainer" parent="PanelContainer/Container/Margin"]
layout_mode = 2

[node name="JuegoLabel" type="Label" parent="PanelContainer/Container/Margin/Info"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Menú de configuración de partida"

[node name="GeneralLabel" type="Label" parent="PanelContainer/Container/Margin/Info"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Menú de configuración general"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/Container/Margin/Info"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="JuegoOptions" type="VBoxContainer" parent="PanelContainer/Container"]
layout_mode = 2

[node name="Guardar" type="Button" parent="PanelContainer/Container/JuegoOptions"]
custom_minimum_size = Vector2(265, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Guardar Partida"

[node name="Reiniciar" type="Button" parent="PanelContainer/Container/JuegoOptions"]
custom_minimum_size = Vector2(265, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Reiniciar Partida"

[node name="CambiarConfiguracion" type="Button" parent="PanelContainer/Container/JuegoOptions"]
custom_minimum_size = Vector2(265, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Cambiar Configuración"

[node name="Finalizar" type="Button" parent="PanelContainer/Container/JuegoOptions"]
custom_minimum_size = Vector2(265, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Finalizar Partida"

[node name="Salir" type="Button" parent="PanelContainer/Container/JuegoOptions"]
custom_minimum_size = Vector2(265, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Salir"

[node name="HSeparator4" type="HSeparator" parent="PanelContainer/Container/JuegoOptions"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="GeneralOptions" type="VBoxContainer" parent="PanelContainer/Container"]
visible = false
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/Container/GeneralOptions"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 65)
layout_mode = 2

[node name="Volume" type="HBoxContainer" parent="PanelContainer/Container/GeneralOptions"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="VolumeLabel" type="Label" parent="PanelContainer/Container/GeneralOptions/Volume"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Volumen"

[node name="VolumeSlider" type="HSlider" parent="PanelContainer/Container/GeneralOptions/Volume"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_vertical = 4
value = 50.0

[node name="HSeparator4" type="HSeparator" parent="PanelContainer/Container/GeneralOptions"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Resolution" type="HBoxContainer" parent="PanelContainer/Container/GeneralOptions"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ResolutionLabel" type="Label" parent="PanelContainer/Container/GeneralOptions/Resolution"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Resolución"

[node name="ResolutionOption" type="OptionButton" parent="PanelContainer/Container/GeneralOptions/Resolution"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "960x540"
popup/item_2/id = 2
popup/item_3/text = "640x480"
popup/item_3/id = 3

[node name="HSeparator5" type="HSeparator" parent="PanelContainer/Container/GeneralOptions"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="Margin2" type="MarginContainer" parent="PanelContainer/Container"]
layout_mode = 2
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Container/Margin2"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 20

[node name="Continuar" type="Button" parent="PanelContainer/Container/Margin2/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_7txyo")
theme_override_styles/hover = SubResource("StyleBoxTexture_tgodx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_a73en")
theme_override_styles/focus = SubResource("StyleBoxTexture_e52o8")
text = "Continuar"

[node name="Cerrar" type="Button" parent="PanelContainer/Container/Margin2/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_7txyo")
theme_override_styles/hover = SubResource("StyleBoxTexture_tgodx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_a73en")
theme_override_styles/focus = SubResource("StyleBoxTexture_e52o8")
text = "Cerrar"

[node name="Margin3" type="MarginContainer" parent="PanelContainer/Container"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 40

[node name="PausedLabel" type="Label" parent="PanelContainer/Container/Margin3"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Partida pausada"

[connection signal="pressed" from="PanelContainer/Container/Tipo/Juego" to="." method="_on_juego_pressed"]
[connection signal="pressed" from="PanelContainer/Container/Tipo/General" to="." method="_on_general_pressed"]
[connection signal="pressed" from="PanelContainer/Container/JuegoOptions/Guardar" to="." method="_on_guardar_pressed"]
[connection signal="pressed" from="PanelContainer/Container/JuegoOptions/Reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="PanelContainer/Container/JuegoOptions/CambiarConfiguracion" to="." method="_on_cambiar_configuracion_pressed"]
[connection signal="pressed" from="PanelContainer/Container/JuegoOptions/Finalizar" to="." method="_on_finalizar_pressed"]
[connection signal="pressed" from="PanelContainer/Container/JuegoOptions/Salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="PanelContainer/Container/Margin2/HBoxContainer/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="PanelContainer/Container/Margin2/HBoxContainer/Cerrar" to="." method="_on_cerrar_pressed"]
